<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Searchmatic</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Nouveau</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_reset">Reset</string>
    <string name="action_read">Read</string>
    
    <string name="title_activity_detail">DetailActivity</string>
    <string name="detail_title">Titre</string>
    <string name="search_button_label">OK</string>
    <string name="empty_listresultview">Aucun résultat</string>
    <string name="action_save">Enregistrer</string>
    <string name="action_delete">Supprimer</string>
    
    <string name="dialog_reset_title">Confirm reset ?</string>
    <string name="dialog_delete_title">Confirm delete ?</string>
    
    <string name="dialog_OK">OK</string>
    <string name="dialog_cancel">Annuler</string>

</resources>