<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.searchmatic.MainActivity" >

    <item
        android:id="@+id/action_add"
        android:orderInCategory="90"
        android:showAsAction="never"
        android:title="@string/action_add"/>
    
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="95"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    
    <item
        android:id="@+id/action_read"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_read"/>

    <item
        android:id="@+id/action_save"
        android:orderInCategory="111"
        android:showAsAction="never"
        android:title="@string/action_save"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="115"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/action_reset"/>
    
</menu>
